--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.8.1
+cloudinary==1.32.0
 dj-database-url==0.5.0
 Django==4.2.17
+django-cloudinary-storage==0.3.0
 gunicorn==20.1.0
 psycopg2==2.9.10
 sqlparse==0.5.3
+urllib3==1.26.20
 whitenoise==6.4.0
