--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.8.1
 cloudinary==1.32.0
+cryptography==39.0.2
 dj-database-url==0.5.0
 Django==4.2.17
-django-allauth==65.3.1
+django-allauth==0.50.0
 django-cloudinary-storage==0.3.0
 gunicorn==20.1.0
+oauthlib==3.2.2
 psycopg2==2.9.10
 PyJWT==2.7.0
+python3-openid==3.2.0
+requests-oauthlib==2.0.0
 sqlparse==0.5.3
 urllib3==1.26.20
 whitenoise==6.4.0
-cryptography==39.0.2
